@startuml HomeScreen Class Diagram

package Pages{
    package HomeScreen {

        abstract class HomeScreen{
            - _homeScreenVM : HomeScreenVM
        }

        class HomeScreenModel{
            + collectionOfColors : List<Color>
            + @changeScreenColor : Color
            + @changeButtonColor : Color
        }

        class HomeScreenVM{
            + colorChange() : void
        }
    }
}

HomeScreenVM --> HomeScreenModel : extends
Pages.HomeScreen.HomeScreen --> HomeScreenVM: uses

@enduml
